[gd_scene load_steps=2 format=3 uid="uid://dd3e4xifimrj2"]

[ext_resource type="Script" path="res://alpha 2.0/models/character_base.gd" id="1_vvquw"]

[node name="CharacterBase" type="Node2D"]
script = ExtResource("1_vvquw")

[node name="Label" type="Label" parent="."]
offset_left = -21.0
offset_right = 22.0
offset_bottom = 23.0
text = "50 hp"

[node name="Atb1" type="ProgressBar" parent="."]
offset_left = -72.0
offset_top = 28.0
offset_right = -27.0
offset_bottom = 55.0

[node name="Atb2" type="ProgressBar" parent="."]
offset_left = -22.0
offset_top = 28.0
offset_right = 23.0
offset_bottom = 55.0

[node name="Atb3" type="ProgressBar" parent="."]
offset_left = 28.0
offset_top = 28.0
offset_right = 73.0
offset_bottom = 55.0
